add ability to strip redundant leading whitespace - fixes #7

--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "text",
     "comment"
   ],
+  "dependencies": {
+    "strip-indent": "^0.1.0"
+  },
   "devDependencies": {
     "mocha": "*",
     "browserify": "^3.0.0",
