--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "browser": "a=$npm_package_name; browserify -r ./index:$a -s $a index.js -o browser.js"
   },
   "files": [
-    "index.js"
+    "index.js",
+    "browser.js"
   ],
   "keywords": [
     "browser",
