Require Node.js 4

--- a/bower.json
+++ b/bower.json
@@ -1,32 +1,32 @@
 {
-  "name": "multiline",
-  "description": "Multiline strings in JavaScript",
-  "license": "MIT",
-  "main": "browser.js",
-  "authors": [
-    {
-      "name": "Sindre Sorhus",
-      "email": "sindresorhus@gmail.com",
-      "url": "http://sindresorhus.com"
-    }
-  ],
-  "keywords": [
-    "multiline",
-    "multi-line",
-    "multiple",
-    "line",
-    "comment",
-    "string",
-    "str",
-    "text",
-    "comment"
-  ],
-  "ignore": [
-    ".*",
-    "package.json",
-    "test.js",
-    "index.js",
-    "experiment.js",
-    "experiment_test.js"
-  ]
+	"name": "multiline",
+	"description": "Multiline strings in JavaScript",
+	"license": "MIT",
+	"main": "browser.js",
+	"authors": [
+		{
+			"name": "Sindre Sorhus",
+			"email": "sindresorhus@gmail.com",
+			"url": "sindresorhus.com"
+		}
+	],
+	"keywords": [
+		"multiline",
+		"multi-line",
+		"multiple",
+		"line",
+		"comment",
+		"string",
+		"str",
+		"text",
+		"comment"
+	],
+	"ignore": [
+		".*",
+		"package.json",
+		"test.js",
+		"index.js",
+		"experiment.js",
+		"experiment_test.js"
+	]
 }
