--- a/package.json
+++ b/package.json
@@ -1,44 +1,44 @@
 {
-  "name": "multiline",
-  "version": "1.0.2",
-  "description": "Multiline strings in JavaScript",
-  "license": "MIT",
-  "repository": "sindresorhus/multiline",
-  "author": {
-    "name": "Sindre Sorhus",
-    "email": "sindresorhus@gmail.com",
-    "url": "sindresorhus.com"
-  },
-  "engines": {
-    "node": ">=0.10.0"
-  },
-  "scripts": {
-    "test": "mocha",
-    "browser": "browserify -s $npm_package_name -o browser.js ."
-  },
-  "files": [
-    "index.js",
-    "browser.js"
-  ],
-  "keywords": [
-    "browser",
-    "multiline",
-    "multi-line",
-    "multiple",
-    "line",
-    "comment",
-    "string",
-    "str",
-    "text",
-    "comment"
-  ],
-  "dependencies": {
-    "strip-indent": "^1.0.0"
-  },
-  "devDependencies": {
-    "browserify": "^12.0.1",
-    "callsites": "^1.0.0",
-    "mocha": "*",
-    "uglify-js": "^2.4.13"
-  }
+	"name": "multiline",
+	"version": "1.0.2",
+	"description": "Multiline strings in JavaScript",
+	"license": "MIT",
+	"repository": "sindresorhus/multiline",
+	"author": {
+		"name": "Sindre Sorhus",
+		"email": "sindresorhus@gmail.com",
+		"url": "sindresorhus.com"
+	},
+	"engines": {
+		"node": ">=0.10.0"
+	},
+	"scripts": {
+		"test": "mocha",
+		"browser": "browserify -s $npm_package_name -o browser.js ."
+	},
+	"files": [
+		"index.js",
+		"browser.js"
+	],
+	"keywords": [
+		"browser",
+		"multiline",
+		"multi-line",
+		"multiple",
+		"line",
+		"comment",
+		"string",
+		"str",
+		"text",
+		"comment"
+	],
+	"dependencies": {
+		"strip-indent": "^2.0.0"
+	},
+	"devDependencies": {
+		"browserify": "^14.5.0",
+		"callsites": "^2.0.0",
+		"mocha": "^4.1.0",
+		"uglify-js": "^2.4.13"
+	}
 }
